--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5677,7 +5677,13 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 
 -BUG FIX: Changing #GUI# PHP timeout setting config now properly updates the .htaccess / .user.ini files that control that
 
+-BUG FIX: Fixed edge-case where charts / logs / news feeds may not load, due to CORS 'Access-Control-Allow-Origin' and incompatible server configurations (redirects)
+
+-New Admin Config section for Security settings (and moved all security-related settings into it)
+
 -New admin security level feature (if end-users prefer editing all config files manually, and avoid displaying setting values in the admin interface)
+
+-New CORS 'Access-Control-Allow-Origin' setting (controls what web domains can load this app's AJAX scripts, etc)
 
 -Better user experience when editing the main config.php file manually (in a text editor...no init code at top / bottom anymore)
 
